# amy

./: .gitignore  .hgignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md  SConstruct
example/: SConscript  async_connect.cpp  async_execute.cpp  async_multi_query.cpp  async_single_query.cpp  blocking_connect.cpp  blocking_execute.cpp  blocking_multi_query.cpp  blocking_single_query.cpp  coroutine.cpp  mariadb_async_multi_query.cpp  mariadb_async_single_query.cpp  utils.cpp  utils.hpp
include/: amy.hpp  amysql.hpp
include/amy/: asio.hpp  asio.hpp.in  auth_info.hpp  basic_connector.hpp  basic_results_iterator.hpp  basic_scoped_transaction.hpp  client_flags.hpp  connect.hpp  connector.hpp  endpoint_traits.hpp  error.hpp  execute.hpp  field.hpp  field_info.hpp  mariadb_service.hpp  mysql_options.hpp  mysql_service.hpp  options.hpp  param_connect.hpp  placeholders.hpp  result_set.hpp  row.hpp  sql_types.hpp  system_error.hpp
include/amy/detail/: asio.hpp  execute_handler.hpp  mariadb_ops.hpp  mysql.hpp  mysql_lib_init.hpp  mysql_ops.hpp  mysql_option.hpp  mysql_types.hpp  noncopyable.hpp  service_base.hpp  throw_error.hpp  value_cast.hpp
include/amy/impl/: mariadb_service.ipp  mysql_service.ipp
include/amysql/: auth_info.hpp  basic_connector.hpp  connector.hpp  endpoint_traits.hpp  error.hpp  mysql_service.hpp  system_error.hpp
include/amysql/detail/: mysql.hpp  mysql_lib_init.hpp  mysql_option.hpp  mysql_types.hpp  service_base.hpp  throw_error.hpp
include/amysql/impl/: mysql_service.ipp
site_scons/site_tools/genhtml/: __init__.py
site_scons/site_tools/lcov/: __init__.py
test/: SConscript  async_connect_test.cpp  auth_info_test.cpp  blocking_connect_test.cpp  blocking_query_test.cpp  connector_test.cpp  global_fixture.hpp  init.sql  main.cpp  mariadb_async_connect_test.cpp  setup.sql  teardown.sql
